desktop layout under progress

--- a/src/css/custom-components.css
+++ b/src/css/custom-components.css
@@ -7,7 +7,7 @@
 }
 
 .image-box {
-     @apply relative my-24;
+    @apply relative my-24;
 }
 
 .image-box-border {
@@ -26,9 +26,7 @@
     bottom: -3rem;
 }
 
-.black-hole-image {
-
-}
+.black-hole-image {}
 
 .blockquote-2::before {
     @apply font-heading text-8xl leading-none opacity-10 absolute;
@@ -44,6 +42,10 @@
     @apply w-10/12 h-full mx-auto flex justify-between items-center;
 }
 
+.source {
+    @apply text-white font-bold;
+}
+
 .connections {
     @apply w-32 flex justify-between;
 }
@@ -53,25 +55,65 @@
     .header {
         @apply h-32;
     }
+
     .heading {
         @apply text-8xl leading-none;
     }
+
     .image-box-border {
         @apply w-84 h-72;
-        right:-1.5rem;
+        right: -1.5rem;
     }
+
     .katie-bouman-image,
     .black-hole-image {
         @apply w-auto ml-auto;
     }
+
     .blockquote-1,
     .blockquote-2 {
         @apply max-w-sm text-lg;
     }
+
     .footer {
         @apply h-24;
     }
+
     .links {
         @apply w-9/12;
+    }
+
+    .source {
+        @apply text-2xl;
+    }
+}
+
+@screen xl {
+    .header {
+        @apply w-full border-transparent bg-transparent fixed bottom-0 top-auto;
+    }
+
+    .heading {
+        @apply text-11xl text-white border-gray-400;
+         text-shadow: -1px -1px 0 #000,
+         1px -1px 0 #000,
+         -1px 1px 0 #000,
+         1px 1px 0 #000;
+    }
+
+    .footer {
+        @apply h-screen w-24 fixed right-0;
+    }
+
+    .links {
+        @apply w-auto h-90 mt-12 flex-col;
+    }
+
+    .source {
+        writing-mode:vertical-rl;
+    }
+
+    .connections {
+        @apply h-56 flex-col;
     }
 }
