--- a/src/css/custom-components.css
+++ b/src/css/custom-components.css
@@ -1,5 +1,5 @@
 .header {
-    @apply w-auto h-20 bg-white border-0 border-b border-gray-400 sticky top-0 z-10;
+    @apply w-auto h-20 bg-white border-0 border-b border-gray-400 sticky top-0 z-50;
 }
 
 .heading {
@@ -11,7 +11,7 @@
 }
 
 .image-box-border {
-    @apply w-10/12 h-64 border-18 border-cyan-lite absolute;
+    @apply w-10/12 h-64 border-18 border-cyan-lite absolute z-10;
     bottom: 2rem;
     right: 0;
 }
@@ -35,7 +35,11 @@
 }
 
 .footer {
-    @apply w-auto h-20 bg-cyan-lite border-0 border-b border-gray-400 sticky bottom-0;
+    @apply w-auto h-20 bg-cyan-lite border-0 border-b border-gray-400 sticky bottom-0 z-20;
+}
+
+.gray-background {
+    @apply hidden;
 }
 
 .links {
@@ -90,19 +94,47 @@
 
 @screen xl {
     .header {
-        @apply w-full border-transparent bg-transparent fixed bottom-0 top-auto;
+        @apply w-full mb-12 pt-2 border-transparent bg-transparent fixed bottom-0 top-auto z-10;
     }
 
     .heading {
-        @apply text-11xl text-white border-gray-400;
-         text-shadow: -1px -1px 0 #000,
-         1px -1px 0 #000,
-         -1px 1px 0 #000,
-         1px 1px 0 #000;
+        @apply text-12xl text-white;
+         text-shadow: -0.8px -0.8px 0 #686868,
+         0.8px -0.8px 0 #686868,
+         -0.8px 0.8px 0 #686868,
+         0.8px 0.8px 0 #686868;
+    }
+
+    .image-box-border {
+        @apply w-98 h-84 right-0 bottom-0;
+    }
+
+    .katie-bouman-image,
+    .black-hole-image {
+       transform: scale(1.2) translate(-4rem, 2rem);
+    }
+
+    .blockquote-1,
+    .blockquote-2 {
+        @apply max-w-lg text-2xl;
+    }
+
+    .blockquote-1::before {
+        @apply text-15xl;
+    }
+
+    .blockquote-2::before {
+        @apply text-10xl;
+        top: -5rem;
     }
 
     .footer {
         @apply h-screen w-24 fixed right-0;
+    }
+
+    .gray-background {
+        @apply block w-1/3 h-screen bg-custom-gray fixed top-0 right-0;
+        z-index: -10;
     }
 
     .links {
