--- a/src/css/custom-components.css
+++ b/src/css/custom-components.css
@@ -106,12 +106,13 @@
     }
 
     .image-box-border {
-        @apply w-98 h-84 right-0 bottom-0;
+        @apply w-98 h-98 right-0;
+        bottom: -4rem;
     }
 
     .katie-bouman-image,
     .black-hole-image {
-       transform: scale(1.2) translate(-4rem, 2rem);
+       transform: scale(1.3) translate(-5rem, 3rem);
     }
 
     .blockquote-1,
