--- a/src/css/style.css
+++ b/src/css/style.css
@@ -798,14 +798,14 @@ video {
 
   .image-box-border {
     width: 24rem;
-    height: 20rem;
+    height: 24rem;
     right: 0;
-    bottom: 0;
+    bottom: -4rem;
   }
 
   .katie-bouman-image,
     .black-hole-image {
-    transform: scale(1.2) translate(-4rem, 2rem);
+    transform: scale(1.3) translate(-5rem, 3rem);
   }
 
   .blockquote-1,
